# 3d_hud

./: CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.py  build.py.bak  build.sh  conanfile.py.bak  conanfile.txt
cmake/: build.cmake  dir.cmake  lib.cmake  option.cmake
docs/: DESIGN.md
inc/platform/: graphics_context.h  window.h  window_manager.h
inc/rendering/: rhi_factory.h  view.h
inc/rendering/rhi/: rhi_device.h  rhi_types.h
inc/rendering/rhi/utils/: rhi_utils.h  texture_utils.h
inc/utils/: utils_define.h
inc/utils/common/: result.h
inc/utils/log/: log_manager.h
inc/utils/math/: README.md
inc/utils/math/foundation/: basic_math.h  bit_ops.h
inc/utils/memory/: memory_monitor.h  memory_pool.h
inc/utils/perf/: cpu_profiler.h  gpu_profiler.h  memory_profiler.h  perf_utils.h
inc/utils/string/: string_utilities.h
src/: CMakeLists.txt  window.cpp
src/platform/: CMakeLists.txt  window_base.cpp  window_base.h  window_manager_impl.cpp  window_manager_impl.h
src/platform/windows/: wgl_context.cpp  wgl_context.h  win32_window.cpp  win32_window.h
src/rendering/: CMakeLists.txt  camera.cpp  camera.h  command_buffer.cpp  command_buffer.h  rendering_define.h  view_impl.cpp  view_impl.h
src/utils/: CMakeLists.txt
src/utils/log/: external_logger.cpp  external_logger.h  log_manager_impl.cpp  log_manager_impl.h  logger.h  s_logger.cpp  s_logger.h  spd_logger.cpp  spd_logger.h
src/utils/memory/: memory_monitor.cpp  memory_pool.cpp  rpmalloc.c
src/utils/perf/: gpu_profiler.cpp  memory_profiler.cpp  perf_utils.cpp
src/utils/string/: string_utilities.cpp
